--- a/css/editpassword.css
+++ b/css/editpassword.css
@@ -27,39 +27,28 @@ body {
     height: 90vh;
 }
 
-.info,
-.success,
-/* .warning, */
-.error,
-.validation {
-    max-width: 220px;
-    max-height: 200px;
-
-    border: 1px solid;
-    margin: 10px -20px;
-    padding: 15px 10px 15px 5px;
-    background-repeat: no-repeat;
-    background-position: 0px center;
-
-}
-
-
 .warning {
-    /* color: #D8000C; */
-    background-color: #FFBABA;
-    width: 60%;
+    color:white !important;
+    background-color: #ff00009e;
+    border-radius: 20px;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     /* margin-left: 100px; */
     position: relative;
-    /* left: 30%; */
+    left: 25%;
+    border: solid 2px #ff000048;
+    margin-top: 20px;
+    padding: 10px;
+}
+  .warning.visible {
+    display: block;
+    text-align: center;
+}
+.warning {
     display: none;
     color: red;
-    width: 100%;
-    margin-left: 1%;
-    margin-top: 6%;
-
 }
 
 .wrapper {
