--- a/css/payment.css
+++ b/css/payment.css
@@ -13,7 +13,8 @@
 
 .container {
     min-height: 100vh;
-    background: white;
+    padding-top: 15px;
+    background: #054955dc;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,10 +29,9 @@
     box-shadow: 0 10px 15px rgba(0, 0, 0, .1);
     padding: 20px;
     width: 600px;
-    padding-top: 160px;
-    /* background-color: blue; */
+    padding-top: 150px;
 
-    background-color: #033043e8;
+    background-color: #ffffffa8;
 }
 
 
@@ -83,7 +83,7 @@
     padding: 20px;
     transform: perspective(1000px) rotateY(0deg);
     transition: transform .4s ease-out;
-    background-image: linear-gradient(170deg, #033043, #fda521);
+    background-image: linear-gradient(170deg, #fda521, #6db1a6);
 }
 
 .container .card-container .front .image {
@@ -123,7 +123,7 @@
     height: 100%;
     width: 100%;
     /* background-color: #2124b1; */
-    background: linear-gradient(45deg, yellow, #2124b1);
+    background: linear-gradient(45deg, #6db1a6, #fda521);
     border-radius: 5px;
     padding: 20px 0;
     text-align: right;
@@ -202,8 +202,8 @@ button:hover {
 
 /* From Uiverse.io by adamgiebl */
 .cssbuttons-io-button {
-    background-color: #fda521;
-    color: #033043;
+    background-color: #fda521b8;
+    color: #6db1a6;
     font-family: inherit;
     padding: 0.35em;
     padding-left: 1.2em;
@@ -244,7 +244,7 @@ button:hover {
 .cssbuttons-io-button .icon svg {
     width: 1.1em;
     transition: transform 0.3s;
-    color: #7b52b9;
+    color: #6db1a6;
 }
 
 .cssbuttons-io-button:hover .icon svg {
@@ -324,7 +324,7 @@ button:hover {
 
 
 .cssbuttons-io-button {
-    background: #fda521;
+    background: #f6bf6d;
     color: #033043;
     font-family: inherit;
     padding: 0.35em;
@@ -345,7 +345,7 @@ button:hover {
 }
 
 .cssbuttons-io-button .icon {
-    background: #033043;
+    background: #6db1a6;
     margin-left: 1em;
     position: absolute;
     display: flex;
@@ -372,11 +372,6 @@ button:hover {
 .cssbuttons-io-button:hover .icon svg {
     transform: translateX(0.1em);
 }
-
-
-
-
-
 
 
 
@@ -428,3 +423,4 @@ a {
         margin-left: 11%;
     }
 }
+
