--- a/css/Edit password.css
+++ b/css/Edit password.css
@@ -68,7 +68,7 @@ body {
 
 
 .wrapper {
-
+position: relative;
     width: 400PX;
     height: auto;
     border: #fff solid 2px;
@@ -198,24 +198,18 @@ button:hover{
     text-decoration: none;
     font-weight: 500;
     text-align: center;
-
 }
 
 .signUp-link p a:hover {
     text-decoration: underline;
 }
-.fa-solid, .fas {
-    font-weight: 900;
-    color: var(--first-color) !important;
-    transition: all 0.5s;
-    font-size: 25px;
-    position: absolute;
-    top: 22%;
-    left: 61%;
-}
 
-.fa-solid:hover {
-    text-shadow: 2px 2px 5px var(--first-color);
+.close{
+    color:#fda521;
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    font-size: large;
 }
 
 @media(max-width:750px){
