--- a/css/editpassword.css
+++ b/css/editpassword.css
@@ -52,9 +52,10 @@ body {
 }
 
 .wrapper {
-
-    width: 400PX;
-    height: 400PX;
+    /* width: 400PX; */
+    /* height: 400PX; */
+    padding: 30px;
+    position: relative;
     border: #fff solid 2px;
     border-radius: 20PX;
     margin: 50PX;
@@ -65,7 +66,19 @@ body {
     opacity: 70%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
+.close {
+    font-weight: 900;
+    color: var(--first-color) ;
+    transition: all 0.5s;
+    font-size: 25px;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+}
 
+.close:hover {
+    text-shadow: 2px 2px 5px var(--first-color);
+}
 form-wrapper {
 
     display: flex;
@@ -189,19 +202,7 @@ button:hover{
 .signUp-link p a:hover {
     text-decoration: underline;
 }
-.fa-solid, .fas {
-    font-weight: 900;
-    color: var(--first-color) !important;
-    transition: all 0.5s;
-    font-size: 25px;
-    position: absolute;
-    top: 25%;
-    left: 60%;
-}
 
-.fa-solid:hover {
-    text-shadow: 2px 2px 5px var(--first-color);
-}
 
 @media(max-width:750px){
     .wrapper{
