--- a/css/verification.css
+++ b/css/verification.css
@@ -19,7 +19,13 @@ p{
     color: #033043;
 }
 
-
+.close{
+    color:#fda521;
+    position: absolute;
+    right: 7%;
+    top: 7%;
+    font-size: large;
+}
 
 .container-main {
     display: flex;
@@ -30,6 +36,8 @@ p{
 
 
 .otp-card {
+    position: relative;
+    padding: 10px;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.741);
     border-radius: 20px;
@@ -130,8 +138,8 @@ p{
     border: none !important;
     background-color: transparent !important;
     color: #db9600;
-    padding-bottom: 5% !important ;
-    padding-left: 12% !important;
+    /* padding-bottom: 5% !important ; */
+    padding-left: 5% !important;
     transition: all 0.5s;
 }
 .resend:hover{
