--- a/admin/css/addadmin.css
+++ b/admin/css/addadmin.css
@@ -1,190 +1,238 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  :root {
-    --primary-color: #080a74; 
-  --secondary-color:#f6d673;
-  --Thirdly-color:#d6d9e0 ;
-  --fourthly-color:#1d1d27;
-  }
- body{
-  background-image:url(../img/bhimg.jpg) ;
-  background-size: cover;
-  background-repeat: no-repeat; 
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+
+
 }
-.background{
-height:100%; 
-width: 100%;
-display: flex; 
-justify-content: center;
-opacity: 0.9;
+:root{
+  --first-color:#fda521;
+  --sec-color: #033043;
+  
 }
-.container-main{
+
+body {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 500px;
-  background-repeat:no-repeat;
+  /* background-color: white; */
+  background-image: url(../img/abstract-envelope.png);
+  background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height:100%;
-  margin-top: -90px;
-  opacity: inherit;
-  opacity: 80%;
+
+
 }
-.wrapper{
-  width: 30%;
- height: 400PX;
-  border:4px solid gold;
-  border-radius: 20PX;
-  margin-top: 15%;
+
+.info,
+.success,
+.warning,
+.error,
+.validation {
+  border: 1px solid;
+  margin: 10px -20px;
+  padding: 15px 10px 15px 5px;
+  background-repeat: no-repeat;
+  background-position: 0px center;
+
+}
+
+/* old warning */
+/*.warning {*/
+/*    color: #D8000C;*/
+/*    background-color: #FFBABA;*/
+/*    width: 50%;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    !* margin-left: 100px; *!*/
+/*    position: relative;*/
+/*    left: 30%;*/
+
+/*}*/
+
+.warning {
+  color:white !important;
+  background-color: #ff00009e;
+  border-radius: 20px;
+  width: 65%;
+  /* margin-left: 100px; */
+  border: solid 2px #ff000048;
+  margin: 0 auto;
+}
+.warning.visible {
+  display: block;
   text-align: center;
-  background-color:#1d1d27;
-  padding : 40px;
+}
+
+
+.wrapper {
+position: relative;
+  width: 400PX;
+  height: auto;
+  border: #fff solid 2px;
+  border-radius: 20PX;
+  margin: 50PX;
+  text-align: center;
+  background-color: white;
+  padding: 40px;
+  opacity: initial;
+  opacity: 70%;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-.wrapper:hover{
-  color: rgb(199, 169, 0);
- box-shadow: 2px 2px 15px rgb(213, 181, 0) inset;
-}
-form-wrapper{
 
-display: flex;
-align-items:center ;
-justify-content: center;
-width: 100%;
-height:100%;  
-transition: 1s ease-in-out;
+.form-wrapper {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  transition: 1s ease-in-out;
 }
-h2{
+
+h2 {
   font-size: 40px;
- color:#d6d9e0;
- font-weight: bold;
- text-align: center;
- }
- .input-group-text{
-  background-color: #d6d9e0;
-  color: #f6d673 !important;
- }
- .input-group{
- position: relative;
- margin: 30px 0;
- border-bottom: 2px solid #d6d9e0 ;
- 
- 
- }
- select#inputGroupSelect01 {
-  margin-left: 35%;
-}
- .input-group label{
-     position: absolute;
- top:50% ;
- left: 10px;
- transform: translateY(-50%
- );
- font-size: 16px;
- color:#d6d9e0;
- pointer-events: none;
- transition: .5s;
- font-weight: 700;
- }
- 
- 
- 
- .input-group input{
-     width: 390px ;
-     height: 40px;
-     font-size: 16px;
-     color:#d6d9e0;
-     padding:0 5px ;
-     background:transparent;
-     border: none;
-     outline: none;
- 
- }
- 
- .input-group input:focus~label,
- .input-group input:valid~label{
-     top: -5px;
- } 
- .remember{  margin:-5px 0 15px 5px  ;
- 
- }
- .remember label {
-     color: green;
-     font-size: 20px;
- font-weight: bold
- }
- 
- 
- .remember label input {
-      accent-color: green
-      ;
-      font-size: 15px;
- 
- }
-.Btn {
-  padding: 15px 30px;
-  border-radius: 50px;
-  cursor: pointer;
-  border: 0;
-  border-radius: 0.9em;
-  background-color: var(--secondary-color);
-  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  font-size: 15px;
-  transition: all 0.5s ease;
-  font-family: inherit;
-  margin-bottom: 5%;
-  margin-right: 5%;
-  width: 170px;
-}
-.Btn:hover {
-  letter-spacing: 3px;
-  background-color: var(--secondary-color);
-  color: hsl(0, 0%, 100%);
-  box-shadow: rgb(255, 255, 255) 0px 5px 20px 0px;
+  color: var(--first-color);
+  font-weight: bold;
+  text-align: center;
 }
 
-.logoIcon path {
-  fill: rgb(121, 103, 3);
-}
+.input-group {
+  position: relative;
+  margin: 30px 0;
+  border-bottom: 2px solid black;
 
 
-.terms{
-  margin-left: -350px;
 }
-.TAC{
-  margin-left: -180px;
-  margin-top: -17px;
-  color: #080a74;
-}
-.FRG{
-margin-left: 230px;
-text-decoration: none;
-color: #f6d673;
-margin-bottom: 40px;
-}
-.close{
-  color: black;
+
+.input-group label {
   position: absolute;
-  right: 10%;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: var(--sec-color);
+  pointer-events: none;
+  transition: .5s;
+}
+
+
+
+.input-group input {
+  width: 320px;
+  height: 40px;
+  font-size: 16px;
+  color: black;
+  padding: 0 5px;
+  background: transparent;
+  border: none;
+  outline: none;
+
+}
+
+.input-group input:focus~label,
+.input-group input:valid~label {
+  top: -5px;
+}
+
+
+
+
+
+.remember {
+  margin: -5px 0 15px 5px;
+
+}
+
+.remember label {
+  color: green;
+  font-size: 20px;
+  font-weight: bold
+}
+
+
+.remember label input {
+  accent-color: green;
+  font-size: 15px;
+
+}
+
+button {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  background: transparent;
+  box-shadow: 0 0 5px black;
+  font-size: 20px;
+  color: var(--first-color);
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 30PX;
+  border: none;
+  outline: none;
+  transition: all 0.5s;
+  margin-top: 7%;
+}
+button:hover{
+  color: var(--sec-color);
+  background-color: var(--first-color);
+}
+
+.signUp-link {
+  font-size: 16px;
+  text-align: center;
+  margin: 15px 0;
+
+}
+
+
+.signUp-link p {
+  color: green;
+}
+
+
+.signUp-link p a {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+  text-align: center;
+}
+
+.signUp-link p a:hover {
+  text-decoration: underline;
+}
+
+.close{
+  color:#fda521;
+  position: absolute;
+  right: 5%;
   top: 5%;
+  font-size: large;
 }
-.DHA{
-  margin-left: 205px;
-text-decoration: none;
-color: #f6d673;
-}
+
 @media(max-width:750px){
-  .container-main{
-    height: 114vh;
-  }
   .wrapper{
-    width: 90%;
+      width: 80%;
+  }
+  h2{
+      font-size: 28px;
+  }
+  .input-group input {
+      margin-top: 4%;
+  }
+  button{
+      margin-top: 11%;
+  }
+  .fa-solid, .fas {
+      font-weight: 900;
+      color: var(--first-color) !important;
+      transition: all 0.5s;
+      font-size: 25px;
+      position: absolute;
+      top: 18%;
+      left: 81%;
   }
 }
