--- a/admin/css/adminprofile.css
+++ b/admin/css/adminprofile.css
@@ -39,15 +39,18 @@ html {
     zoom: 1;
   }
   
-  /* .container {
+  .container {
     box-shadow: 0 0 50px rgba(0, 0, 0, .3);
-    margin: 40px auto;
+    margin: 2% auto;
     overflow: hidden;
-    width: 100vh;
+    border-radius: 50px;
+    width: 100%;
+    height: 90%;
     padding: 0;
-  } */
+  }
   
   .header-container {
+    height: 70%;
     position: relative;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask2242%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='url(%26quot%3b%23SvgjsLinearGradient2243%26quot%3b)'%3e%3c/rect%3e%3cpath d='M527.7-46C453.76-40.53 489.61 91.71 272.26 104.65 54.91 117.59-95.15 360.26-238.62 367.85' stroke='rgba(255%2c 255%2c 255%2c 0.42)' stroke-width='2'%3e%3c/path%3e%3cpath d='M736.88-96.89C562.11-53.15 496.41 418.85 236.33 421.56-23.76 424.27-126.09 192.12-264.23 186.36' stroke='rgba(255%2c 255%2c 255%2c 0.42)' stroke-width='2'%3e%3c/path%3e%3cpath d='M766.27-107.19C626.02-85.4 576.72 236.3 326.4 251.76 76.08 267.22 0.72 373.8-113.47 374.96' stroke='rgba(255%2c 255%2c 255%2c 0.42)' stroke-width='2'%3e%3c/path%3e%3cpath d='M830.71-94.52C684.97-85.26 596.71 180.1 319.82 188.67 42.92 197.24-58.28 332.86-191.08 334.27' stroke='rgba(255%2c 255%2c 255%2c 0.42)' stroke-width='2'%3e%3c/path%3e%3cpath d='M908.77-1.05C771.31 79.8 853.56 542.86 592.97 553.2 332.38 563.54 121.98 436.1-38.63 435.6' stroke='rgba(255%2c 255%2c 255%2c 0.42)' stroke-width='2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask2242'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='84.72%25' y1='-39.29%25' x2='15.28%25' y2='139.29%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient2243'%3e%3cstop stop-color='%230e2a47' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(10%2c 114%2c 115%2c 1)' offset='0.74'%3e%3c/stop%3e%3cstop stop-color='rgba(10%2c 114%2c 115%2c 1)' offset='0.89'%3e%3c/stop%3e%3cstop stop-color='rgba(10%2c 114%2c 115%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
   }
@@ -94,7 +97,7 @@ html {
   
   .header {
     color: #fff;
-    padding: 15px;
+    padding: 50px;
     height: 50vh;
   }
   
@@ -137,9 +140,9 @@ html {
   
   .overlay-header {
     background-color: #eee;
-    height: 200px;
-    margin: -50px 0 0 -25%;
-    transform: rotate(-10deg);
+    height: 65%;
+    margin: -10% 0 0 -25%;
+    transform: rotate(-8deg);
     width: 150%;
     z-index: 0;
   }
@@ -147,13 +150,23 @@ html {
   .body {
     background-color: #eee;
     color: #555;
-    margin-top: -100px;
+    /* margin-top: -150px; */
     padding: 0 15px 15px;
-    position: relative;
     background-size: cover;
+    /* height: 20%; */
   }
+  .bodyy {
+    background-color: #eee;
+    color: #555;
+    padding: 0 15px 15px;
+    background-size: cover;
+    /* height: 40%; */
+  }
+
+
   body{
     height: 100vh;
+    margin: 0 8px 0 ;
   }
   
   .body-image {
@@ -323,7 +336,7 @@ html {
     color: #033043;
     text-transform: uppercase;
     letter-spacing: 2px;
-    border: 2px solid #033043;
+    border: 2px solid #fda521;
     border-radius: 13px;
     position: relative;
     transition: all 700ms ease;
